0x02-functions_nested_loops/1-main.c:
n.c:10:5: error: implicit declaration of function ‘print_alphabet’ [-Werror=implicit-function-declaration]
   10 |     print_alphabet();
      |     ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors

